--- a/api_exercise/views/new.ejs
+++ b/api_exercise/views/new.ejs
@@ -5,10 +5,10 @@
 </head>
 <h2>New User</h2>
   <form method="POST" action="/users">
-    First Name: <input type="text" name="first_name"><br><br>
-    Last Name: <input type="text" name="last_name"><br><br>
-    Username: <input type="text" name="username"><br><br>
-    Email: <input type="text" name="email"><br><br>
+    First Name: <input type="text" name="user[firstname]"><br><br>
+    Last Name: <input type="text" name="user[lastname]"><br><br>
+    Username: <input type="text" name="user[username]"><br><br>
+    Email: <input type="text" name="user[email]"><br><br>
     <input type="submit" value="Create New User">
   </form>
 </body>
