--- a/api_exercise/views/all.ejs
+++ b/api_exercise/views/all.ejs
@@ -21,6 +21,7 @@
           <td><p><%= elt.lastname %></p></td>
           <td><p><%= elt.email %></p></td>
           <td><p><%= elt.username %></p></td>
+          <td><a href="/users/<%= elt.id %>/edit" >Edit</a></td>
         </tr>
       <% } %>
     </tbody>
