implement create new wine

--- a/wine/views/index.ejs
+++ b/wine/views/index.ejs
@@ -110,7 +110,7 @@
           Picture
         </div>
         <div class="margin-top-20">
-          <input type="text" class="form-control" name="wine[picture"]/>
+          <input type="text" class="form-control" name="wine[picture]"/>
         </div>
         <div class="bold margin-top-20">
           Description
