--- a/wine/views/index.ejs
+++ b/wine/views/index.ejs
@@ -53,7 +53,7 @@
         <a href="/wines/<%= wine.id %>/edit" class="btn btn-default">Edit Wine</a>
         <br>
         <form method="POST" action="/wines/<%= wine.id %>?_method=delete">
-          <input type="submit" value="Delete" class="btn btn-default">
+          <button type="submit" class="btn btn-danger">Delete</button>
         </form>
       </div>
     </div>
